[gd_scene load_steps=29 format=2]

[ext_resource path="res://Shader_Stuff/SmoothPixelFiltering/SmoothPixel.tres" type="Material" id=1]
[ext_resource path="res://Actors/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Item/Teleport/Teleport.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/System/camera/LevelCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/MultiPlayerMenu/MultiPlayerPopupMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/InitialLevel/InitialLevel.gd" type="Script" id=6]
[ext_resource path="res://Assets/grass_tilemap.png" type="Texture" id=7]

[sub_resource type="Curve" id=1]
bake_resolution = 1
_data = [ Vector2( 0, 1 ), 0.0, -4.98485, 0, 0, Vector2( 0.0291777, 0.381818 ), -0.35, -0.35, 0, 0, Vector2( 0.0689655, 0.381818 ), 0.0, 4.32, 0, 0, Vector2( 0.466843, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), -0.131468, 0.0, 0, 0 ]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=21]
1/name = "grass_tilemap.png.0"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 64, 160, 112 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 1, 1 ), 432, Vector2( 1, 2 ), 438, Vector2( 1, 3 ), 54, Vector2( 1, 5 ), 48, Vector2( 2, 1 ), 504, Vector2( 2, 2 ), 511, Vector2( 2, 3 ), 63, Vector2( 2, 5 ), 56, Vector2( 3, 1 ), 216, Vector2( 3, 2 ), 219, Vector2( 3, 3 ), 27, Vector2( 3, 5 ), 24, Vector2( 5, 1 ), 144, Vector2( 5, 2 ), 146, Vector2( 5, 3 ), 18, Vector2( 5, 5 ), 16, Vector2( 7, 1 ), 255, Vector2( 7, 2 ), 507, Vector2( 8, 1 ), 447, Vector2( 8, 2 ), 510 ]
1/autotile/icon_coordinate = Vector2( 2, 1 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "grass_tilemap.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 80, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "grass_tilemap.png 3"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 80, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="InitialLevel" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="LevelCamera" parent="." instance=ExtResource( 4 )]
position = Vector2( -16, 24 )
time_slow_curve = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
material = ExtResource( 1 )
tile_set = SubResource( 21 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 2
collision_mask = 37
format = 1
tile_data = PoolIntArray( -262136, 0, 1, -131083, 3, 0, -131082, 1, 65538, -131081, 1, 327682, -131080, 1, 327683, -131079, 2, 0, -131076, 3, 0, -131075, 1, 327681, -131074, 1, 327683, -131073, 2, 0, -196606, 3, 0, -196605, 1, 327681, -196604, 1, 327683, -196603, 2, 0, -65546, 1, 131077, -65544, 3, 0, -65543, 1, 327685, -65542, 2, 0, -65540, 1, 65541, -65539, 2, 0, -65538, 3, 0, -65537, 1, 327685, -131072, 2, 0, -131071, 3, 0, -131070, 1, 65541, -131069, 2, 0, -131068, 3, 0, -131067, 1, 65541, -131066, 2, 0, -11, 3, 0, -10, 1, 65538, -9, 1, 327682, -8, 1, 327683, -7, 2, 0, -4, 1, 65538, -3, 1, 327682, -2, 1, 327683, -1, 2, 0, -65534, 1, 131077, -65531, 1, 131077, 65511, 0, 4, 65513, 0, 262148, 65526, 1, 131077, 65528, 3, 0, 65529, 1, 327685, 65530, 2, 0, 65532, 1, 131077, 65534, 3, 0, 65535, 1, 65541, 0, 2, 0, 2, 1, 196613, 5, 1, 196613, 131047, 0, 65540, 131051, 0, 65540, 131061, 3, 0, 131062, 1, 65538, 131063, 1, 327682, 131064, 1, 327683, 131065, 2, 0, 131068, 1, 196613, 131071, 1, 196613, 65538, 3, 0, 65539, 1, 327681, 65540, 1, 327683, 65541, 2, 0, 196583, 0, 65540, 196586, 0, 0, 196587, 0, 0, 196602, 0, 196610, 262122, 0, 131076, 393188, 0, 196612, 524271, 1, 65537, 524272, 1, 65538, 524273, 1, 65538, 524274, 1, 65538, 524275, 1, 65538, 524276, 1, 65538, 524277, 1, 65538, 524278, 1, 65538, 524279, 1, 65538, 524280, 1, 65538, 524281, 1, 65538, 524282, 1, 65538, 524283, 1, 65538, 524284, 1, 65538, 524285, 1, 65538, 524286, 1, 65538, 524287, 1, 65538, 458752, 1, 65538, 458753, 1, 65538, 458754, 1, 65538, 458755, 1, 65538, 458756, 1, 65538, 458757, 1, 65538, 458758, 1, 65538, 458759, 1, 65538, 458760, 1, 65538, 458761, 1, 65538, 458762, 1, 65538, 458763, 1, 65538, 458764, 1, 65538, 458765, 1, 65538, 458766, 1, 65538, 458767, 1, 65538, 458768, 1, 65539, 589807, 1, 131073, 589808, 1, 131074, 589809, 1, 131074, 589810, 1, 131074, 589811, 1, 131074, 589812, 1, 131074, 589813, 1, 131074, 589814, 1, 131074, 589815, 1, 131074, 589816, 1, 131074, 589817, 1, 131074, 589818, 1, 131074, 589819, 1, 131074, 589820, 1, 131074, 589821, 1, 131074, 589822, 1, 131074, 589823, 1, 131074, 524288, 1, 131074, 524289, 1, 131074, 524290, 1, 131074, 524291, 1, 131074, 524292, 1, 131074, 524293, 1, 131074, 524294, 1, 131074, 524295, 1, 131074, 524296, 1, 131074, 524297, 1, 131074, 524298, 1, 131074, 524299, 1, 131074, 524300, 1, 131074, 524301, 1, 131074, 524302, 1, 131074, 524303, 1, 131074, 524304, 1, 131075, 655343, 1, 196609, 655344, 1, 196610, 655345, 1, 196610, 655346, 1, 196610, 655347, 1, 196610, 655348, 1, 196610, 655349, 1, 196610, 655350, 1, 196610, 655351, 1, 196610, 655352, 1, 196610, 655353, 1, 196610, 655354, 1, 196610, 655355, 1, 196610, 655356, 1, 196610, 655357, 1, 196610, 655358, 1, 196610, 655359, 1, 196610, 589824, 1, 196610, 589825, 1, 196610, 589826, 1, 196610, 589827, 1, 196610, 589828, 1, 196610, 589829, 1, 196610, 589830, 1, 196610, 589831, 1, 196610, 589832, 1, 196610, 589833, 1, 196610, 589834, 1, 196610, 589835, 1, 196610, 589836, 1, 196610, 589837, 1, 196610, 589838, 1, 196610, 589839, 1, 196610, 589840, 1, 196611 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -198.676, 78.0111 )

[node name="MultiPlayerPopupMenu" parent="." instance=ExtResource( 5 )]
margin_left = 33.4317
margin_top = 18.9577
margin_right = 183.432
margin_bottom = 166.958
rect_scale = Vector2( 0.3, 0.3 )

[node name="Teleport" parent="." instance=ExtResource( 3 )]
position = Vector2( 55.5, 87 )

[connection signal="area_entered" from="Teleport" to="." method="_on_Teleport_area_entered"]
[connection signal="area_exited" from="Teleport" to="." method="_on_Teleport_area_exited"]
